<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:ignore="MissingTranslation">CRIC</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="abcClicInvite" tools:ignore="MissingTranslation">clic here !</string>
    <string name="poids">poids</string>
    <string name="taille">taille</string>
    <string name="metre">m\ètre</string>
    <string name="cm">cm</string>
    <string name="megaFonction">cool</string>
    <string name="calcIMC">calculer l\'IMC</string>
    <string name="RAZ">RAZ</string>
    <string name="grosbutton">bouton</string>
    <string name="ImcResult">IMC</string>
    <string name="cricTitle">IP mask calculator</string>
    <string name="ipSeparator">.</string>
    <string name="Go">GO</string>
    <string name="sSlash">/</string>

</resources>
