<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/abcPoids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/poids" />

    <EditText
        android:id="@+id/editPoids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/abcPoids"
        android:layout_below="@+id/abcPoids"
        android:ems="10"
        android:inputType="number" >
        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/abcTaille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPoids"
        android:layout_below="@+id/editPoids"
        android:layout_marginTop="14dp"
        android:text="@string/taille" />

    <EditText
        android:id="@+id/editTaille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/abcTaille"
        android:layout_below="@+id/abcTaille"
        android:ems="10"
        android:inputType="number"

    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTaille"
        android:layout_below="@+id/editTaille"
        android:orientation="horizontal" >
    </RadioGroup>

    <RadioButton
        android:id="@+id/radioMetre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:checked="true"
        android:text="@string/metre" />

    <RadioButton
        android:id="@+id/radioCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radioMetre"
        android:layout_alignBottom="@+id/radioMetre"
        android:layout_alignRight="@+id/checkmegaFonction"
        android:text="@string/cm" />

    <Button
        android:id="@+id/butCalcIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioMetre"
        android:layout_centerVertical="true"
        android:text="@string/calcIMC" />

    <Button
        android:id="@+id/butRAZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butCalcIMC"
        android:layout_below="@+id/butCalcIMC"
        android:text="@string/RAZ" />

    <CheckBox
        android:id="@+id/checkmegaFonction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butRAZ"
        android:layout_below="@+id/butRAZ"
        android:text="@string/megaFonction" />

    <TextView
        android:id="@+id/imcResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkmegaFonction"
        android:layout_centerHorizontal="true"
        android:text="@string/ImcResult"
        android:textSize="50sp" />

</RelativeLayout>